--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-singlefile": "^0.13.5",
     "vitest": "^0.32.0"
   }
 }
